# sclsh

./: LICENSE  TODO  meson.build
doc/design/: data-model.txt  syntax.txt
include/sclsh/: ast.h  commands.h  expr.h  io.h  parse.h  sclsh.h  unwind.h  util.h  value.h
src/: ast.c  commands.c  expr.c  io.c  parse.c  sclsh.c  unwind.c  util.c  value.c  value.h
